--- a/cabinet.html
+++ b/cabinet.html
@@ -27,10 +27,10 @@
                         <i class="fas fa-bars"></i>
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/">Home</a>
-                        <a class="dropdown-item" href="./review.html">Reviews</a>
+                        <a class="dropdown-item" href="/">Home</a>         
                         <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
                         <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                        <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
                     </div>
                 </div>
             </div>
