--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" href="./review.html">Reviews</a>
                     <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
                     <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                    <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'">
         </div>
         <footer class="d-flex justify-content-center pointer" id="bfooter" >
-            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span>Privacy Policy</span></p>
         </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
