--- a/policy.html
+++ b/policy.html
@@ -24,150 +24,54 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" href="./review.html">Reviews</a>
                     <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
                     <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                    <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
                 </div>
             </div>
         </div>
-
-        <section class="container">
-            <div class="card bg-secondary">
-                <div class="card-header bg-light">
-                    <i class="fas fa-info-circle"></i>
-                    <b>General information</b>
-                </div>
-                <div class="card-body bg-secondary">
-                    <span style="color: yellow">
-                            This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.
-                            We use your Personal Information only for providing and improving the Site. By using our Site you agree to the collection and use of information in accordance with this policy
-                    </span>
-                </div>
-            </div>
+        <section id="policy">
+            <h3>General information</h3>
+            This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.
+            We use your Personal Information only for providing and improving the Site. By using our Site you agree to the collection and use of information in accordance with this policy
+            <h3>Information Collection And Use</h3>
+            While using our Site we may ask you to provide us with certain personally identifiable information which can be used to contact or identify you.
+            Personally identifiable information may include, but is not limited to: your name; Personal Information; Log Data.
+            Like many site operators, we collect information that your browser sends whenever you visit our Site
+            <h3>Log Data</h3>
+            This Log Data may include information such as your computers Internet Protocol & IP 
+            address; browser type; browser version; the pages of our Site that you visit; the time and
+            date of your visit; the time spent on those pages and other statistics. In addition we may
+            use third party services such as Google Analytics that collect, monitor and analyze this ...
+            The Log Data section is for businesses that use analytics or tracking services in websites
+            or apps, like Google Analytics
+            <h3>Communications</h3>
+            We may use your Personal Information to contact you with newsletters; marketing or promotional materials and other information 
+            <h3>Cookies</h3>
+            Cookies are files with small amount of data, which may include an anonymous uniqueidentifier. Cookies are sent to your browser from a website and stored on your computers hard drive.
+            Like many websites, we use “cookies” to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if
+            you do not accept cookies, you maynot be able to use some portions of our Site
+            <h3>Security</h3>
+            The security of your Personal Information is important to us, but remember that no
+            method of transmission over the Internet, or method of electronic storage is 100% secure.
+            While we strive to use commercially acceptable means to pro tect your Personal
+            Information, we cannot guarantee its absolute security due to the nature of the process
+            <h3>Changes To This Privacy Policy</h3>
+            This Privacy Policy is effective as of March 31st, 2016 and will remain in effect except with
+            respect to any changes in its provisions in the future, which will be in effect immediately
+            after being posted on this page.
+            We reserve the right to update or change our Privacy Policy
+            at any time and you should check this Privacy Policy periodically. Your continued use of the
+            Service after we post any modifications to the Privacy Policy on this page will constitute
+            your acknowledgment of the modifications and your consent to abide and be bound by the
+            modified Privacy Policy.
+            If we make any material changes to this Privacy Policy, we will notify you either through the email address you have provided us, or by placing a
+            prominent notice on our Site
+            <h3>Contact Us</h3>
+            If you have any questions about this Privacy Policy, please contact us!
             <br>
-
-            <div class="card bg-secondary">
-                    <div class="card-header bg-light">
-                        <i class="fas fa-info-circle"></i>
-                        <b>Information Collection And Use</b>
-                    </div>
-                    <div class="card-body bg-secondary">
-                        <span style="color: yellow">
-                                While using our Site we may ask you to provide us with certain personally identifiable information which can be used to contact or identify you.
-                                Personally identifiable information may include, but is not limited to: your name; Personal Information; Log Data.
-                                Like many site operators, we collect information that your browser sends whenever you visit our Site
-                        </span>
-                    </div>
-                </div>
-                <br>
-
-                <div class="card bg-secondary">
-                        <div class="card-header bg-light">
-                            <i class="fas fa-info-circle"></i>
-                            <b>Log Data</b>
-                        </div>
-                        <div class="card-body bg-secondary">
-                            <span style="color: yellow">
-                                    This Log Data may include
-                                    information such as your computers Internet Protocol & IP
-                                    address; browser type; browser version; the pages of our Site that you visit; the time and
-                                    date of your visit; the time spent on those pages and other statistics.
-                                    In addition we may
-                                    use third party
-                                    services such as Google Analytics that collect, monitor and analyze this ...
-                                    The Log Data section is for businesses that use analytics or tracking services in websites
-                                    or apps, like Google Analytics
-                            </span>
-                        </div>
-                    </div>
-                    <br>
-
-
-                    <div class="card bg-secondary">
-                            <div class="card-header bg-light">
-                                <i class="fas fa-info-circle"></i>
-                                <b>Communications</b>
-                            </div>
-                            <div class="card-body bg-secondary">
-                                <span style="color: yellow">
-                                        We may use your Personal Information to contact you with newsletters;
-                                        marketing or promotional materials and other information
-                                </span>
-                            </div>
-                        </div>
-                        <br>
-
-                        <div class="card bg-secondary">
-                                <div class="card-header bg-light">
-                                    <i class="fas fa-info-circle"></i>
-                                    <b>Cookies</b>
-                                </div>
-                                <div class="card-body bg-secondary">
-                                    <span style="color: yellow">
-                                            Cookies are files with small amount of data, which may include an anonymous uniqueidentifier. Cookies are sent to your browser from a website and stored on your computers hard drive.
-                                            Like many websites, we use “cookies” to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if
-                                            you do not accept cookies, you maynot be able to use some portions of our Site
-                                    </span>
-                                </div>
-                            </div>
-                            <br>
-
-                            <div class="card bg-secondary">
-                                    <div class="card-header bg-light">
-                                        <i class="fas fa-info-circle"></i>
-                                        <b>Security</b>
-                                    </div>
-                                    <div class="card-body bg-secondary">
-                                        <span style="color: yellow">
-                                                The security of your Personal Information is important to us, but remember that no
-                                                method of transmission over the Internet, or method of electronic storage is 100% secure.
-                                                
-                                                While we strive to use commercially acceptable means to pro
-                                                tect your Personal
-                                                Information, we cannot guarantee its absolute security due to the nature of the process
-                                        </span>
-                                    </div>
-                                </div>
-                                <br>
-
-                                <div class="card bg-secondary">
-                                        <div class="card-header bg-light">
-                                            <i class="fas fa-info-circle"></i>
-                                            <b>Changes To This Privacy Policy</b>
-                                        </div>
-                                        <div class="card-body bg-secondary">
-                                            <span style="color: yellow">
-                                                    This Privacy Policy is effective as of March 31st, 2016 and will remain in effect except with
-                                                    respect to any changes
-                                                    in its provisions in the future, which will be in effect immediately
-                                                    after being posted on this page.
-                                                    We reserve the right to update or change our Privacy Policy
-                                                    at any time and you should check this Privacy Policy periodically. Your continued use of the
-                                                    S
-                                                    ervice after we post any modifications to the Privacy Policy on this page will constitute
-                                                    your acknowledgment of the modifications and your consent to abide and be bound by the
-                                                    modified Privacy Policy.
-                                                    If we make any material changes to this Privacy Policy
-                                                    , we will
-                                                    notify you either through the email address you have provided us, or by placing a
-                                                    prominent notice on our Site
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <br>
-                                    <div class="card bg-secondary">
-                                            <div class="card-header bg-light">
-                                                <i class="fas fa-info-circle"></i>
-                                                <b>Contact Us</b>
-                                            </div>
-                                            <div class="card-body bg-secondary">
-                                                <span style="color: yellow">
-                                                        If you have any questions about this Privacy Policy, please contact us!
-                                                </span>
-                                            </div>
-                                        </div>
-                                        <br>
         </section>
+        <br>
 
         <section id="cntl_btns">
             <button type="button" class="btn btn-outline-warning" onclick="history.back()">
