--- a/kitchen.html
+++ b/kitchen.html
@@ -25,9 +25,9 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" href="./review.html">Reviews</a>
                     <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
                     <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                    <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
                 </div>
         </div>
     </div>
