--- a/review.html
+++ b/review.html
@@ -32,10 +32,11 @@
         </div>
 
         <section class="container">
+
             <div class="card bg-secondary">
-                <div class="card-header bg-light">
+                <div class="card-header">
                     <i class="fas fa-user-check"></i>&nbsp; 
-                    <b>Daniel S.</b>
+                    <b class="text-yellow">Daniel S.</b>
                     &nbsp; 
                     <i class="fas fa-star text-danger"></i>
                     <i class="fas fa-star text-danger"></i>
@@ -43,8 +44,9 @@
                     <i class="fas fa-star text-danger"></i>
                     <i class="fas fa-star text-danger"></i>
                 </div>
-                <div class="card-body bg-secondary">
-                    <span style="color: yellow">
+
+                <div class="card-body bg-light">
+                    <span>
                         We had our kitchen cabinets repainted and couldn't be more satisfied with how everything turned out. Andrey was very professional in communicating with us,
                          helping us determine exactly what we wanted in a finished product, fitting us into his already busy schedule and even working around some issues we 
                          had with another project overlapping in his work area that unexpectedly took much longer than anticipated. We especially appreciated his attention to detail,
@@ -56,9 +58,9 @@
             <br>
 
             <div class="card bg-secondary">
-                <div class="card-header bg-light">
+                <div class="card-header">
                     <i class="fas fa-user-check"></i>&nbsp; 
-                    <b>Lucy Silva</b>
+                    <b class="text-yellow">Lucy Silva</b>
                     &nbsp; 
                     <i class="fas fa-star text-danger"></i>
                     <i class="fas fa-star text-danger"></i>
@@ -66,8 +68,8 @@
                     <i class="fas fa-star text-danger"></i>
                     <i class="fas fa-star text-danger"></i>
                 </div>
-                <div class="card-body bg-secondary">
-                    <span style="color: yellow">
+                <div class="card-body bg-light">
+                    <span>
                         I decided to completely renovate my kitchen a year ago, and after speaking with several contractors, decided to hire Elena to run the project. 
                         This was the most important first decision of many, and I really glad I found her for the job. Here are some reasons why. 
                         <br><br>
@@ -88,9 +90,9 @@
             <br>
 
             <div class="card bg-secondary">
-                    <div class="card-header bg-light ">
+                    <div class="card-header">
                         <i class="fas fa-user-check"></i>&nbsp; 
-                        <b>Edwin J.</b>
+                        <b class="text-yellow">Edwin J.</b>
                         &nbsp; 
                         <i class="fas fa-star text-danger"></i>
                         <i class="fas fa-star text-danger"></i>
@@ -98,21 +100,21 @@
                         <i class="fas fa-star text-danger"></i>
                         <i class="fas fa-star text-danger"></i>
                     </div>
-                    <div class="card-body bg-secondary">
-                        <span style="color: yellow">
+                    <div class="card-body bg-light">
+                        <span>
                                 Andrey provided an outstanding service that I didn't think was possible for this project. He was very direct from the beginning, receptive to my questions and concerns, 
                                 patient with his explanation, and explained the pros and cons to the different alternatives possible to redo kitchen cabinets. Furthermore, he was very flexible with 
                                 scheduling and he went out of his way to accommodate my hectic schedule. Andrey kept my kitchen clean throughout the entire process from start to finish; 
                                 and I love the outcome of his work. I highly recommend Andrey and I know he will do the right thing for his current and future customers.
                         </span>
                     </div>
-                </div>
-                <br>
+            </div>
+            <br>
 
-                <div class="card bg-secondary">
-                        <div class="card-header bg-light">
+            <div class="card bg-secondary">
+                        <div class="card-header">
                             <i class="fas fa-user-check"></i>&nbsp; 
-                            <b>Ron Huda</b>
+                            <b class="text-yellow">Ron Huda</b>
                             &nbsp; 
                             <i class="fas fa-star text-danger"></i>
                             <i class="fas fa-star text-danger"></i>
@@ -120,20 +122,20 @@
                             <i class="fas fa-star text-danger"></i>
                             <i class="fas fa-star text-danger"></i>
                         </div>
-                        <div class="card-body bg-secondary">
-                            <span style="color: yellow">
+                        <div class="card-body bg-light">
+                            <span>
                                     Andrey and his team were phenomenal. Absolutely professional, hardworking, ethical and fair priced. They were honest and provided the type of 
                                     customer service you RARELY receive. They completed out project while we were still in California and on route to Virginia. Our cabinets look brand 
                                     new and the wainscoting looks like it belongs in an art gallery. I would recommend hiring these guys without a second thought or blink!
                             </span>
                         </div>
-                    </div>
-                    <br>
+            </div>
+            <br>
 
-                    <div class="card bg-secondary">
-                            <div class="card-header bg-light">
+            <div class="card bg-secondary">
+                            <div class="card-header">
                                 <i class="fas fa-user-check"></i>&nbsp; 
-                                <b>Stephanie Mahr</b>
+                                <b class="text-yellow">Stephanie Mahr</b>
                                 &nbsp; 
                                 <i class="fas fa-star text-danger"></i>
                                 <i class="fas fa-star text-danger"></i>
@@ -141,8 +143,8 @@
                                 <i class="fas fa-star text-danger"></i>
                                 <i class="fas fa-star text-danger"></i>
                             </div>
-                            <div class="card-body bg-secondary">
-                                <span style="color: yellow">
+                            <div class="card-body bg-light">
+                                <span>
                                     Elena and her team did a fantastic job fully renovating our kitchen. From start to finish, she managed the project with expertise, creativity, 
                                     kindness and professionalism. 
                                     <br>  
@@ -155,29 +157,29 @@
                                     We are so pleased with our beautiful, functional, new kitchen!    
                                 </span>
                             </div>
-                        </div>
-                        <br>
+            </div>
+            <br>
 
-                        <div class="card bg-secondary">
-                                <div class="card-header bg-light">
+            <div class="card bg-secondary">
+                <div class="card-header">
                                     <i class="fas fa-user-check"></i>&nbsp; 
-                                    <b>Jimmy R.</b>
+                                    <b class="text-yellow">Jimmy R.</b>
                                     &nbsp; 
                                     <i class="fas fa-star text-danger"></i>
                                     <i class="fas fa-star text-danger"></i>
                                     <i class="fas fa-star text-danger"></i>
                                     <i class="fas fa-star text-danger"></i>
                                     <i class="fas fa-star text-danger"></i>
-                                </div>
-                                <div class="card-body bg-secondary">
-                                    <span style="color: yellow">
-                                        Andrey and his crew were absolutely amazing. They took our outdated cabinets and gave them life again! He was extremely responsive and 
-                                        flexible with his scheduling. Within a few days of contacting him, he had his guys out to start working on the cabinets. His price was extremely 
-                                        reasonable considering the amount of doors and drawer faces that needed to be painted.
-                                    </span>
-                                </div>
-                            </div>
-                            <br>
+                </div>
+                <div class="card-body bg-light">
+                    <span>
+                        Andrey and his crew were absolutely amazing. They took our outdated cabinets and gave them life again! He was extremely responsive and 
+                        flexible with his scheduling. Within a few days of contacting him, he had his guys out to start working on the cabinets. His price was extremely 
+                        reasonable considering the amount of doors and drawer faces that needed to be painted.
+                    </span>
+                </div>
+            </div>
+            <br>
         </section>
 
 
