--- a/cabinet.html
+++ b/cabinet.html
@@ -137,7 +137,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="aboutUsTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="aboutUsTitle">About Us</h5>
@@ -146,24 +146,22 @@
               </button>
             </div>
             <div class="modal-body">
-              <span>
-                &nbsp; Kitchen Updateis a family owned and operated company. It was born as a collaboration of two existing companies: GoodPainter LLC, 
-                who specializes in cabinet painting and refacing; andGreat Décor LLC, who specializes in kitchen remodeling.KitchenUpdateis a tradename of Great Décor LLC.
-                <br>
-                &nbsp; We created Kitchen Update company to provide ourcustomers with a wide range of servicesto get a new look of theirkitchens. We offer professional cabinet painting. 
-                Our uniqueprocess allows you to get a fresh look withmaximumquality andwithout remodeling process hassle.
-                <br>
-                &nbsp; If you don’t like the look of your existing doors, we can easilyhelp you by replacing them with new solid wood doorsinwiderange of styles.
-                <br>
-                &nbsp; If you feel that you are so tired of your old, useless,unattractive kitchen, that even a fresh coat of paint cannot changeit, then it’s time for new cabinets.
-                At Kitchen Update you can find13 kitchen cabinet brands, over 100 door styles and finishes;standard size, semi-custom and custom cabinetsfor any taste.
-                <br>
-                &nbsp; With our designer’s help and our team craftmanship you willget one of a kind custom built-in. We provide storage designs for:wine cellars,pantries, mudroom units, 
-                laundry room storage, craftroom organization and more.
-                <br>
-                &nbsp; Kitchen Update is licensed andinsured company. Weservice Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, 
-                Alexandria City County, Arlington County.
-              </span>
+                <div>
+                    <img width="50%" src="./picture/2.jpg" alt="about us picture" class="col-md-5 col-md-offset-1 float-left">
+                    <p>
+                    &nbsp;Kitchen Update is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. Kitchen Update is a tradename of Great Décor LLC.
+                    <br><br>
+                    &nbsp;We created Kitchen Update company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
+                    <br><br>
+                    &nbsp;If you don’t like the look of your existing doors, we can easily help you by replacing them with new solid wood doors in wide range of styles. 
+                    <br><br>
+                    &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At Kitchen Update you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
+                    <br><br>
+                    &nbsp;With our designer’s help and our team craftmanship you will get one of a kind custom built-in. We provide storage designs for: wine cellars, pantries, mudroom units, laundry room storage, craft room organization and more.
+                    <br><br>
+                    &nbsp;Kitchen Update is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
+                    </p>      
+                </div>
             </div>
           </div>
         </div>
