--- a/review.html
+++ b/review.html
@@ -230,11 +230,11 @@
             <div class="modal-header">
               <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
-                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                  <a class="nav-link active txt-c1" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
                     aria-selected="true">Send Message</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                  <a class="nav-link txt-c1" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
                     aria-selected="false">Request a call</a>
                 </li>
               </ul>
@@ -299,7 +299,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success btn-send float-right" value="Send message">
+                                    <input type="submit" class="btn bg_color1 btn-send float-right" value="Send message">
                                 </div>
                             </div>
                         </div>
@@ -348,7 +348,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success btn-send float-right" value="Send message">
+                                    <input type="submit" class="btn bg_color1 btn-send float-right" value="Send message">
                                 </div>
                             </div>
                         </div>
