--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
         
         <div id="main" class="d-flex justify-content-around align-items-center">
-            <img src="picture/main/3.png" alt="Cabinet Painting" onclick="location.href='./cabinet.html'">
-            <img src="picture/main/1.png" alt="Kitchen Remodeling" onclick="location.href='./kitchen.html'">
-            <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'">
+            <img src="picture/main/3.png" alt="Cabinet Painting" onclick="location.href='./cabinet.html'" class="pointer">
+            <img src="picture/main/1.png" alt="Kitchen Remodeling" onclick="location.href='./kitchen.html'" class="pointer">
+            <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'" class="pointer">
         </div>
         <footer class="d-flex justify-content-center pointer" id="bfooter" >
             <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span>Privacy Policy</span></p>
@@ -87,11 +87,11 @@
             <div class="modal-header">
               <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
-                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                  <a class="nav-link active txt-c1" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
                     aria-selected="true">Send Message</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                  <a class="nav-link txt-c1" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
                     aria-selected="false">Request a call</a>
                 </li>
               </ul>
@@ -156,7 +156,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success btn-send float-right" value="Send message">
+                                    <input type="submit" class="btn bg_color1 btn-send float-right" value="Send message">
                                 </div>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="submit" class="btn btn-success btn-send float-right" value="Send message">
+                                    <input type="submit" class="btn bg_color1 btn-send float-right" value="Send message">
                                 </div>
                             </div>
                         </div>
