--- a/kitchen.html
+++ b/kitchen.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="webicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="/style/style.css">
@@ -24,9 +26,9 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
-                    <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                    <a class="dropdown-item" href="/"><b>Home</b></a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b>About Us</b></a>
+                    <a class="dropdown-item" href="./gallery.html"><b>Gallery</b></a>
                     <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
                 </div>
         </div>
@@ -65,7 +67,7 @@
                 That's why we offer cabinets that fit every style and budget   
             </span>
         </div>
-        <div id="catalog" >
+        <div id="catalog" class="pointer">
             <img src="./picture/kitchen/catalogs.png" class="dark" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
         </div>
         <br>
@@ -88,7 +90,10 @@
                    <img class="col-sm w-50" src="./picture/kitchen/collage2_2.png">
                     <div class="col-sm">
                         <span style="font-size: 21px;">
-                                Want to get a beautiful kitchen fast, but don’t want to spend a fortune. Stock standard size cabinets will be the best fit for you. We can offer a huge variety of door styles, colors and finishes. And with our designer’s help you can expect getting the best result for your money. Brands that we carry features wood construction, superior hardware, and durable paints and finishes. EPA TSCA Title VI compliant. Greengard Gold certified. Waterbourne UV finishes. Stock cabinets provide a fast and easy way to give your kitchen a fresh new look. We can make it easier for you to keep your remodeling project on time and bring your vision to life.
+                                                       Getting all but only the standard features is not quite your way, not a problem. Semi-custom kitchen cabinets will be the great solution for you. Semi-custom cabinets are available in more styles, features and
+options than stock cabinets, allowing you to create a personalized look for your kitchen, at less expense than custom cabinets.
+They are also available with features such as rollout shelves, door racks and organization inserts, and can be embellished with crown
+molding, cabinet legs and feet to create a unique look. What color to choose from white and black options only? It is not the question for you anymore. We are offering spray paint services to match any color you like.
                         </span>
                     </div> 
                 </div>
