--- a/custom.html
+++ b/custom.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="webicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="/style/style.css">
@@ -24,10 +25,10 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="/">Home</a>
-                <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
-                <a class="dropdown-item" href="./gallery.html">Gallery</a>
-                <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
+                    <a class="dropdown-item" href="/"><b>Home</b></a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b>About Us</b></a>
+                    <a class="dropdown-item" href="./gallery.html"><b>Gallery</b></a>
+                    <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
             </div>
         </div>
     </div>
