--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Kitchen Update</title>
 </head>
@@ -23,16 +24,16 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
-                    <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                    <a class="dropdown-item" href="/"><b>Home</b></a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b>About Us</b></a>
+                    <a class="dropdown-item" href="./gallery.html"><b>Gallery</b></a>
                     <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
                 </div>
             </div>
         </div>
 
         <div id="kitchen_mdg">
-            <h1>We have a solution to any <span>Kitchen Idea</span></h1>
+            <h1><b>We have a solution to any <span>Kitchen Idea</span></b></h1>
         </div>
         
         <div id="main" class="d-flex justify-content-around align-items-center">
@@ -40,8 +41,9 @@
             <img src="picture/main/1.png" alt="Kitchen Remodeling" onclick="location.href='./kitchen.html'" class="pointer">
             <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'" class="pointer">
         </div>
-        <footer class="d-flex justify-content-center pointer" id="bfooter" >
-            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span>Privacy Policy</span></p>
+        <br><br><br><br><br><br><br>
+        <footer class="d-flex justify-content-center pointer">
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
@@ -112,15 +114,15 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_name">Firstname *</label>
-                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                                        <label for="form_name"><b>First name *</b></label>
+                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your first name *" required="required" data-error="Firstname is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_lastname">Lastname *</label>
-                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                                        <label for="form_lastname"><b>Last name *</b></label>
+                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your last name *" required="required" data-error="Lastname is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
@@ -128,19 +130,19 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_email">Email *</label>
+                                        <label for="form_email"><b>Email *</b></label>
                                         <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_need">Please specify your need *</label>
+                                        <label for="form_need"><b>Please specify your need *</b></label>
                                         <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                                             <option value=""></option>
-                                            <option value="Request quotation">Request quotation</option>
-                                            <option value="Request order status">Request order status</option>
-                                            <option value="Request copy of an invoice">Request copy of an invoice</option>
+                                            <option value="Cabinet painting question">Cabinet painting question</option>
+                                            <option value="Kitchen remodeling question">Kitchen remodeling question</option>
+                                            <option value="Custom built-ins question">Custom built-ins question</option>
                                             <option value="Other">Other</option>
                                         </select>
                                         <div class="help-block with-errors"></div>
@@ -150,8 +152,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="form_message">Message *</label>
-                                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                                        <label for="form_message"><b>Message *</b></label>
+                                        <textarea id="form_message" name="message" class="form-control" placeholder="Hello *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
@@ -174,15 +176,15 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_name">Firstname *</label>
-                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                                        <label for="form_name"><b>First name *</b></label>
+                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your first name *" required="required" data-error="First name is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="form_lastname">Lastname *</label>
-                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                                        <label for="form_lastname"><b>Last name *</b></label>
+                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your last name *" required="required" data-error="Last name is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
@@ -190,7 +192,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="form_phone">Your Phone *</label>
+                                        <label for="form_phone"><b>Your Phone *</b></label>
                                         <input id="form_phone" type="phone" name="phone" class="form-control" placeholder="Please enter your phone *" required="required" data-error="Valid email is required.">
                                         <div class="help-block with-errors"></div>
                                     </div>
@@ -199,8 +201,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="form_message">Message *</label>
-                                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                                        <label for="form_message"><b>Message *</b></label>
+                                        <textarea id="form_message" name="message" class="form-control" placeholder="Hello *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
