--- a/pages/img12.html
+++ b/pages/img12.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../webicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
     <link href="../vendor/foundation.css" rel="stylesheet" type="text/css" />
@@ -28,6 +29,15 @@
             </div>
         </section>
 
+        <section id="cntl_btns">
+                <button type="button" class="btn btn-outline-warning" onclick="location.href='./img11.html'">
+                    <i class="fas fa-chevron-circle-left"></i>
+                </button>
+                <button type="button" class="btn btn-outline-warning" onclick="location.href='../cabinet.html'">
+                    <i class="fas fa-home"></i>
+                </button>
+        </section>
+
         <section>
             <div class="row">
                 <div class="columns">
@@ -39,19 +49,7 @@
             </div>
         </section>
 
-        <br>
-        <section id="cntl_btns">
-                <button type="button" class="btn btn-outline-warning" onclick="location.href='./img11.html'">
-                    <i class="fas fa-chevron-circle-left"></i>
-                </button>
-                <button type="button" class="btn btn-outline-warning" onclick="location.href='../cabinet.html'">
-                    <i class="fas fa-home"></i>
-                </button>
-        </section>
 
-        <footer class="d-flex justify-content-center pointer" id="bfooter">
-            <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
-        </footer>
 
     </div>
 
