--- a/pages/img9.html
+++ b/pages/img9.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    
+        <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     <link href="../vendor/foundation.css" rel="stylesheet" type="text/css" />
     <link href="../vendor/twentytwenty.css" rel="stylesheet" type="text/css" />
 
@@ -28,18 +28,6 @@
             </div>
         </section>
 
-        <section>
-            <div class="row">
-                <div class="columns">
-                    <div class="twentytwenty-container">
-                        <img src="../picture/cabinet/9a.jpg" />
-                        <img src="../picture/cabinet/9b.jpg" />
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <br>
         <section id="cntl_btns">
                 <button type="button" class="btn btn-outline-warning" onclick="location.href='./img8.html'">
                     <i class="fas fa-chevron-circle-left"></i>
@@ -52,9 +40,17 @@
                 </button>
         </section>
 
-        <footer class="d-flex justify-content-center pointer" id="bfooter">
-            <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
-        </footer>
+        <section>
+            <div class="row">
+                <div class="columns">
+                    <div class="twentytwenty-container">
+                        <img src="../picture/cabinet/9a.jpg" />
+                        <img src="../picture/cabinet/9b.jpg" />
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </div>
 
