--- a/pages/img3.html
+++ b/pages/img3.html
@@ -17,7 +17,7 @@
     <title>Cabinet Painting</title>
 </head>
 
-<body>
+<body id="b2">
 
     <div id="wrapper container">
         <section class="top">
