--- a/pages/img8.html
+++ b/pages/img8.html
@@ -16,7 +16,7 @@
     <title>Cabinet Painting</title>
 </head>
 
-<body>
+<body id="b2">
 
     <div id="wrapper container">
         <section class="top">
